--- a/admin.html
+++ b/admin.html
@@ -460,7 +460,7 @@
         };
 
         // API地址配置
-        const API_BASE_URL = 'http://localhost:3000';
+        const API_BASE_URL = 'https://28119nethost.netlify.app';
 
         // 页面加载时自动加载数据
         document.addEventListener('DOMContentLoaded', function() {
